Fix color of VM configuration tab submenu in dark mode

--- a/src/views/virtualmachines/details/tabs/configuration/virtual-machine-configuration-tab.scss
+++ b/src/views/virtualmachines/details/tabs/configuration/virtual-machine-configuration-tab.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  background: white;
+  background: var(--pf-c-page__main-section--m-light--BackgroundColor);
   &--main {
     margin: var(--pf-global--spacer--sm);
     width: fit-content;
